// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditDisplayNameDialog /> renders correctly 1`] = `
<Modal
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale Cluster"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      inputMode="numeric"
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      normalize={[Function]}
      validate={[Function]}
    />
  </Form>
</Modal>
`;

exports[`<EditDisplayNameDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Scale Cluster"
>
  <ErrorBox
    message="Error editing cluster"
    response={
      Object {
        "erorMessage": "this is an error",
        "error": true,
      }
    }
  />
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      inputMode="numeric"
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      normalize={[Function]}
      validate={[Function]}
    />
  </Form>
</Modal>
`;
